
Mantle Business Artifacts - Universal Service Library Release Notes

===========================================================================
Release 1.0.1 - TBD
===========================================================================

Mantle Universal Service Library 1.0.1 is a minor new feature and bug fix
release.

This release is based on Moqui Framework TODO and mantle-udm TODO.

TODO

===========================================================================
Release 1.0.0 - 24 Jan 2016
===========================================================================

Mantle Universal Service Library 1.0.0 is the first release as a component
repository separate from the other components in Mantle Business Artifacts.

This release is based on Moqui Framework 1.6.1 and mantle-udm 1.0.0.

The initial code is from Mantle 1.2.0 and has only minor changes but has
updates for the new Moqui Framework component management features and use
of Bintray JCenter for jar files instead of local ones (used in automated
tests).


===========================================================================
Long Term To Do List (some for mantle-usl, others for other components)
===========================================================================

- UBL 2.1 integrations
  - https://www.oasis-open.org/committees/tc_home.php?wg_abbrev=ubl
  - integration/mantle-ubl component
  - at least matching supported EDI messages
- Braintree Payment Processor
  - https://www.braintreepayments.com
  - https://developers.braintreepayments.com/start/hello-server/java
  - https://developers.braintreepayments.com/start/hello-client/javascript/v2
  - payment/Braintree component
- 2Checkout Payment Processor
  - https://www.2checkout.com
- Stripe Payment Processor
  - https://stripe.com
- Amazon Payments
  - https://payments.amazon.com/home
- Shopping Cart Integrations
  - API2Cart
    - https://www.api2cart.com
    - https://www.api2cart.com/supported-platforms/