@@ -90,9 +90,9 @@ along with this software (see the LICENSE.md file). If not, see
                                             terms: [field: 'productId', size: maxResults],
                                             aggregations: [
                                                     orderQuantitySum: [sum: [field:'orderQuantity']],
-                                                    quantityReservedSum: [sum: [field:'quantityReserved']],
-                                                    quantityNotAvailableSum: [sum: [field:'quantityNotAvailable']],
-                                                    quantityNotIssuedSum: [sum: [field:'quantityNotIssued']]
+                                                    quantityReservedSum: [sum: [field:'reservations.quantityReserved']],
+                                                    quantityNotAvailableSum: [sum: [field:'reservations.quantityNotAvailable']],
+                                                    quantityNotIssuedSum: [sum: [field:'reservations.quantityNotIssued']]
                                             ]
                                     ]
                             ]
@@ -156,7 +156,7 @@ along with this software (see the LICENSE.md file). If not, see
                                             terms: [field: 'productId', size: maxResults],
                                             aggregations: [
                                                     estimatedConsumeQuantitySum: [sum: [field:'estimatedConsumeQuantity']],
-                                                    consumeQuantitySum: [sum: [field:'consumeQuantity']]
+                                                    consumeQuantitySum: [sum: [field:'issuances.consumeQuantity']]
                                             ]
                                     ]
                             ]
@@ -179,7 +179,7 @@ along with this software (see the LICENSE.md file). If not, see
                                             terms: [field: 'productId', size: maxResults],
                                             aggregations: [
                                                     estimatedProduceQuantitySum: [sum: [field:'estimatedProduceQuantity']],
-                                                    produceQuantitySum: [sum: [field:'produceQuantity']]
+                                                    produceQuantitySum: [sum: [field:'receipts.produceQuantity']]
                                             ]
                                     ]
                             ]
