@@ -10,7 +10,14 @@ release.
 
 This release is based on Moqui Framework TODO and mantle-udm TODO.
 
-TODO
+New Features
+
+
+Bug Fixes
+
+- Fixed issue with get#InventoryProjectedInfo service where field names in
+  sum aggregations were incorrect (missing sub-object names) for
+  reservations, issuances, and receipts fields; GitHub issue #6
 
 ===========================================================================
 Release 1.0.0 - 24 Jan 2016
